# src/main/resources/swagger.yml
@@ -658,6 +658,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorApiResponse'
+  /empresa/resumido:
+    get:
+      tags:
+        - Empresa
+      summary: Buscando Lista de Empresa Resumido
+      description: Buscando Lista de Empresa Resumido na Plataforma
+      operationId: buscandoListaEmpresaResumido
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EmpresaResumidoApiResponse'
   /empresa/{guid}:
     get:
       tags:
